// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H2 /> should match the snapshot when a color is specified 1`] = `
.c0 {
  font-size: 1em;
  color: blue;
}

<h2
  className="c0"
  color="blue"
/>
`;

exports[`<H2 /> should match the snapshot when no color is specified 1`] = `
.c0 {
  font-size: 1em;
  color: black;
}

<h2
  className="c0"
/>
`;
